--- a/client/src/pages/Users/users.module.css
+++ b/client/src/pages/Users/users.module.css
@@ -1,12 +1,14 @@
-.createBox {
-  width: 200px;
-  height: 150px;
+.userInfoWrapper {
+  width: 180px;
+  height: 100px;
 
   background: rgba(255, 255, 255, 0.5);
 
   border: 1px solid #d6d8e7;
 
   border-radius: 16px;
+  text-align: center;
+
   display: flex;
   justify-content: center;
   align-items: center;
